--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
     <string name="app_name">RedditViewer</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">All</string>
+    <string name="title_section2">Funny</string>
+    <string name="title_section3">Pics</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Refresh</string>
     <string name="action_settings">Settings</string>
+    <string name="emptyList">The list is empty!</string>
 
 </resources>
